src/ariel-os-macros/tests/ui/task/missing_peripherals_param.stderr
error: custom attribute panicked
 --> tests/ui/task/missing_peripherals_param.rs:6:1
  |
6 | #[ariel_os::task(autostart)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: to provide this function with peripherals, use the `peripherals` macro parameter
